--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,12 @@
           },
           "configurations": {
             "production": {
+              
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "4mb",
+                  "maximumError": "6mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -48,11 +49,21 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization":false
+                
+              
             },
             "development": {
               "buildOptimizer": false,
-              "optimization": false,
+              "optimization":  {
+                "scripts": true,
+                "styles": {
+                     "minify": true,
+                     "inlineCritical": false
+                     },
+                "fonts": true
+            },
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
